# Space-Invaders

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
shaders/: bullet.frag  bullet.vert  comet.frag  comet.vert  enemy.frag  enemy.vert  engine_glow.frag  engine_glow.vert  hud.frag  hud.vert  particle.frag  particle.vert  powerup.frag  powerup.vert  shelter.frag  shelter.vert  ship.frag  ship.vert  star.frag  star.vert
src/: Input.cpp  Input.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/core/: Game.cpp  Game.h  Input.cpp  Input.h
src/entities/: Player.cpp  Player.h
src/graphics/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/loaders/: ObjLoader.h
src/systems/: BulletSystem.cpp  BulletSystem.h  EnemySystem.cpp  EnemySystem.h  HudSystem.cpp  HudSystem.h  ParticleSystem.cpp  ParticleSystem.h  PowerUpSystem.cpp  PowerUpSystem.h  ShelterSystem.cpp  ShelterSystem.h  Starfield.cpp  Starfield.h
